# human-date-resolver

./: CLAUDE.md  README.md  pyproject.toml
.claude/skills/date-nlp-parser/: SKILL.md  metadata.json
.claude/skills/date-resolver/: SKILL.md  metadata.json
.github/workflows/: test.yml
src/: compute_date.py
tests/: test_compute_date.py
