[project]
name = "human-date-resolver"
version = "0.1.0"
description = "Claude Code skills to resolve human-readable dates to machine-readable formats"
requires-python = ">=3.14"
dependencies = [
    "tzdata>=2025.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
